added the link to the projects

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
                 </p>
-                <a class="ProjectButton" href="project.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject1/index.html"> Show Project</a>
             </div>
 
             <div class="ProjectContainer">
@@ -97,7 +97,7 @@
                 <p>
                     This is a description of the second project. It is a project that I have worked on and I am proud of.
                 </p>
-                <a class="ProjectButton" href="project.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject2/index.html"> Show Project</a>
             </div>
 
             <div class="ProjectContainer">
@@ -106,7 +106,7 @@
                 <p>
                     This is a description of the third project. It is a project that I have worked on and I am proud of.
                 </p>
-                <a class="ProjectButton" href="project.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject3/index.html"> Show Project</a>
             </div>
 
             <div class="ProjectContainer">
@@ -115,7 +115,7 @@
                 <p>
                     This is a description of the fourth project. It is a project that I have worked on and I am proud of.
                 </p>
-                <a class="ProjectButton" href="project.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject4/index.html"> Show Project</a>
             </div>
 
             <div class="ProjectContainer">
@@ -124,7 +124,7 @@
                 <p>
                     This is a description of the fifth project. It is a project that I have worked on and I am proud of.
                 </p>
-                <a class="ProjectButton" href="project.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject5/index.html"> Show Project</a>
             </div>
             <div class="ProjectContainer">
                 <img src="Images/BoxProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
@@ -132,7 +132,7 @@
                 <p>
                     This is a description of the six project.<br> It is a project that I have worked on and I am proud of.
                 </p>
-                <a class="ProjectButton" href="project.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject6/index.html"> Show Project</a>
             </div>
 
             </div>
