--- a/projects/LandingPageProject1/index.html
+++ b/projects/LandingPageProject1/index.html
@@ -24,7 +24,7 @@
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
         <div class="ProjectButtons">
-          <a href="https://link-to-project.com" class="button" target="_blank">View Project</a>
+          <a href="./project 1/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
         </div>
       </p>
