--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
               <br /><br />
       
               <label for="description">Reason:</label><br />
-              <textarea id="description" name="description" rows="3" required></textarea>
+              <textarea id="description" name="description" rows="3" maxlength="500" required></textarea>
               <br /><br />
       
-              <input type="submit" value="Send to Guy" /></form>
+              <input type="button" value="Send to Guy" /></form>
           </div>
         </div>
       </section>
