--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <header>
       <nav class="NavBarFixed">
         <ul class="NavBar">
-          <div class="Button">&#9776;</div>
           <img
             src=" Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
           <h3>Guy Even-Chen</h3>
+          <input class="CHECKBOX" type="checkbox" name="Button" id="CHECKBOX">
+          <div class="Button">&#9776;</div>
           <li><a href="#home-section">Home</a></li>
           <li><a href="#about-me-section">About</a></li>
           <li><a href="#services-section">Services</a></li>
