--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
           <img
             src=" Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
           <h3>Guy Even-Chen</h3>
-          <input class="CHECKBOX" type="checkbox" name="Button" id="CHECKBOX">
-          <div class="Button">&#9776;</div>
-          <li><a href="#home-section">Home</a></li>
-          <li><a href="#about-me-section">About</a></li>
-          <li><a href="#services-section">Services</a></li>
-          <li><a href="#contact-me-section">Contact me</a></li>
+          <label for="menu-toggle" id="hamburger">&#8801;</label>
+          <input type="checkbox" id="menu-toggle" />
+
+          <li class="navbar-links"><a href="#home-section">Home</a></li>
+          <li class="navbar-links"><a href="#about-me-section">About</a></li>
+          <li class="navbar-links"><a href="#contact-me-section">Contact me</a></li>
+          <li class="navbar-links"><a href="#services-section">Services</a></li>
         </ul>
       </nav>
     </header>
