--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <h2>Contact me:</h2>
           <div id="contact-me-section" class="Contact">
             <form class="Form" action="/submit_form" method="post">
-
+              <h2>Contact me:</h2>
               <label for="full-name">Full Name:</label>
               <input type="text" id="full-name" name="full-name" required />
               <br /><br />
