fixed responsive and cscs

--- a/projects/LandingPageProject1/Project 1/index.html
+++ b/projects/LandingPageProject1/Project 1/index.html
@@ -15,8 +15,10 @@
         : היום בחיוך, יש למלא את הפרטים
       </p>
       <form class="FormArea">
-        <input type="text" name="full name" placeholder="שם מלא" required />
-        <input type="email" name="email" placeholder="מייל" required />
+        <label for="text">:שם מלא</label>
+        <input type="text" name="full name" placeholder="" required />
+        <label for="text">:מייל </label>
+        <input type="email" name="email" placeholder="" required />
         <button type="submit">שליחה</button>
       </form>
     </div>
