--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -7,8 +7,8 @@
   <div class="Box">
     <div class="ImageContainer">
       <div class="TopHalf">
-        <img src="images/TopPorjectWallpaper.png" alt="Top image" />
-      </div>
+         <img src="images/TopPorjectWallpaper.png" alt="Top image" /> 
+       </div> 
     </div>
 </div>
 
@@ -18,9 +18,9 @@
     </p>
     <br>
     <form>
-        <label for="full-name">שם מלא:</label>
+        <label for="full-name">:שם מלא</label>
         <input type="text" id="full-name" placeholder="">
-        <label for="email">דואל:</label>
+        <label for="email">:דואל/label>
         <input type="email" id="email" placeholder="">
         
         <button type="submit">Submit</button>
