--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -20,7 +20,7 @@
     <form>
         <label for="full-name">:שם מלא</label>
         <input type="text" id="full-name" placeholder="">
-        <label for="email">:דואל/label>
+        <label for="email">:דואל</label>
         <input type="email" id="email" placeholder="">
         
         <button type="submit">Submit</button>
