--- a/projects/LandingPageProject4/project 4/index.html
+++ b/projects/LandingPageProject4/project 4/index.html
@@ -15,9 +15,9 @@
 
     <div class="form">
       <label for="fullName">שם מלא:</label>
-      <input type="text" placeholder="" />
+      <input type="text" placeholder="" required />
       <label for="email">דואל:</label>
-      <input type="email" placeholder="" />
+      <input type="email" placeholder="" required />
       <button>שליחה</button>
     </div>
   </body>
