--- a/projects/LandingPageProject6/project 6/index.html
+++ b/projects/LandingPageProject6/project 6/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="imagebox">
-        <img src="images/IconBox.svg" alt="Box Image" />
+        <img class="BoxIconTop" src="images/IconBox.svg" alt="Box Image" />
       </div>
     </div>
 
