--- a/projects/LandingPageProject5/project 5/index.html
+++ b/projects/LandingPageProject5/project 5/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="ImageBoxs">
-        <div class="image box">
+        <div class="box">
           <h2>לגלות את העולם</h2>
           <p>
             לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
