--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -23,7 +23,7 @@
         <label for="email">:דואל</label>
         <input type="email" id="email" placeholder="">
         
-        <button type="submit">Submit</button>
+        <button type="submit">שליחה</button>
     </form>
 </div>
 
