--- a/projects/LandingPageProject5/project 5/index.html
+++ b/projects/LandingPageProject5/project 5/index.html
@@ -39,11 +39,11 @@
           </h3>
           <form>
             <label for="fullname">שם מלא:</label>
-            <input type="text" id="fullname" placeholder="" />
+            <input type="text" id="fullname" placeholder="" required />
             <label for="email">דוא״ל:</label>
-            <input type="email" id="email" placeholder="" />
+            <input type="email" id="email" placeholder="" required />
             <label for="experience">החוויה שלכם:</label>
-            <textarea id="experience" placeholder=""></textarea>
+            <textarea id="experience" placeholder="" required></textarea>
             <button type="submit">שליחה</button>
           </form>
         </div>
