--- a/projects/LandingPageProject5/project 5/index.html
+++ b/projects/LandingPageProject5/project 5/index.html
@@ -11,32 +11,29 @@
         <div class="box">
           <h2>לגלות את העולם</h2>
           <p>
-            לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
-            מקום” בעת עריכ.
+            בואו איתנו לגלות את העולם ולחוות חוויות חדשות ומרתקות במקומות שונים
+            בעולם.
           </p>
         </div>
 
-        <img class="image image9" src="images/9.png" alt="Image 1" />
-        <img class="image image10" src="images/10.png" alt="Image 2" />
-        <img class="image image6" src="images/6.png" alt="Image 3" />
-        <img class="image image11" src="images/11.png" alt="Image 4" />
-        <img class="image image2" src="images/2.png" alt="Image 5" />
-        <img class="image image5" src="images/5.png" alt="Image 6" />
-        <img class="image image4" src="images/4.png" alt="Image 7" />
-        <img class="image image3" src="images/3.png" alt="Image 8" />
-        <img class="image image12" src="images/12.png" alt="Image 9" />
-        <img class="image image14" src="images/14.png" alt="Image 10" />
-        <img class="image image7" src="images/7.png" alt="Image 11" />
-        <img class="image image13" src="images/13.png" alt="Image 12" />
-        <img class="image image1" src="images/1.png" alt="Image 13" />
-        <img class="image image8" src="images/8.png" alt="Image 14" />
+        <img class="image flex image9" src="images/9.png" alt="Image 1" />
+        <img class="image flex image10" src="images/10.png" alt="Image 2" />
+        <img class="image flex image6" src="images/6.png" alt="Image 3" />
+        <img class="image flex image11" src="images/11.png" alt="Image 4" />
+        <img class="image flex image2" src="images/2.png" alt="Image 5" />
+        <img class="image flex image5" src="images/5.png" alt="Image 6" />
+        <img class="image flex image4" src="images/4.png" alt="Image 7" />
+        <img class="image flex image3" src="images/3.png" alt="Image 8" />
+        <img class="image flex image12" src="images/12.png" alt="Image 9" />
+        <img class="image flex image14" src="images/14.png" alt="Image 10" />
+        <img class="image flex image7" src="images/7.png" alt="Image 11" />
+        <img class="image flex image13" src="images/13.png" alt="Image 12" />
+        <img class="image flex image1" src="images/1.png" alt="Image 13" />
+        <img class="image flex image8" src="images/8.png" alt="Image 14" />
 
         <div class="image FormBox">
           <h2>ספרו לנו על החוויה שלכם</h2>
-          <h3>
-            לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
-            מקום” בעת עריכ.
-          </h3>
+          <h3>תשתפו אותנו בחוויה שלכם ואולי תוכלו להופיע באחת מהתמונות שלנו</h3>
           <form>
             <label for="fullname">שם מלא:</label>
             <input type="text" id="fullname" placeholder="" required />
