added project 7 section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/CoffreeProjectWallpaper.png" alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 1</h4>
+                <h4>Project 1</h4>
                 <p>
                     This is a description of the first project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -95,7 +95,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/PurpleProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 2</h4>
+                <h4>Project 2</h4>
                 <p>
                     This is a description of the second project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -104,7 +104,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/HereNowProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 3</h4>
+                <h4>Project 3</h4>
                 <p>
                     This is a description of the third project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -113,7 +113,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/LetUsLeadProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 4</h4>
+                <h4>Project 4</h4>
                 <p>
                     This is a description of the fourth project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -122,7 +122,7 @@
 
             <div class="ProjectContainer">
                 <img src="Images/GridProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 5</h4>
+                <h4>Project 5</h4>
                 <p>
                     This is a description of the fifth project. It is a project that I have worked on and I am proud of.
                 </p>
@@ -130,11 +130,19 @@
             </div>
             <div class="ProjectContainer">
                 <img src="Images/BoxProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4> HTML Project 6</h4>
+                <h4>Project 6</h4>
                 <p>
                     This is a description of the six project.<br> It is a project that I have worked on and I am proud of.
                 </p>
                 <a class="ProjectButton" href="./projects/LandingPageProject6/index.html"> Show Project</a>
+            </div>
+            <div class="ProjectContainer">
+                <img src="Images/YellowProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
+                <h4>Project 7</h4>
+                <p>
+                    This is a description of the seventh project.<br> It is a project that I have worked on and I am proud of.
+                </p>
+                <a class="ProjectButton" href="./projects/LandingPageProject7/index.html"> Show Project</a>
             </div>
             </div>
         </div>
