--- a/projects/‏‏LandingPageProject7/project 7/index.html
+++ b/projects/‏‏LandingPageProject7/project 7/index.html
@@ -4,109 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/index.css" />
-    <title>Project 6</title>
+    <title>Project 7</title>
   </head>
   <body>
-    <div class="headerContainer">
-      <div class="text">
-        <h1>לחשוב מחוץ ל</h1>
-        <p>
-          לורם איפסום דולור סיט אמט, קונסקטורר אדיפיסינג אלית, קרהשק סכעיט דז
-          מא, מנכם למטכין נשואי מנור. לורם איפסום דולור סיט אמט, קוואזי במר
-          מודוף.
-        </p>
-        <div class="WhatsappBox">
-          <img
-            class="IconWhatsapp"
-            src="images/IconWhatsapp.svg"
-            alt="Whatsapp Icon"
-          />
-        </div>
-      </div>
-      <div class="imagebox">
-        <img class="BoxIconTop" src="images/IconBox.svg" alt="Box Image" />
-      </div>
+    <div class="BoxWhatsapp">
+      <img
+        class="WhatsappImage"
+        src="images/IconWhatsapp.svg"
+        alt="WhatsApp Logo"
+      />
     </div>
 
-    <div class="BoxsContainer">
-      <div class="Box">
-        <img src="images/LocationIcon.png" alt=" GPS Icon" />
-        <p>כותרת אזור</p>
-        <h3>
-          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
-        </h3>
-      </div>
-      <div class="Box">
-        <img src="images/CardNameIcon.png" alt=" Card Name Icon" />
-        <p>כותרת אזור</p>
-        <h3>
-          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
-        </h3>
-      </div>
-      <div class="Box">
-        <img src="images/WandIcon.png" alt=" Wand Icon" />
-        <p>כותרת אזור</p>
-        <h3>
-          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
-        </h3>
-      </div>
-      <div class="Box">
-        <img src="images/BusinessBagIcon.png" alt="Bag Icon" />
-        <p>כותרת אזור</p>
-        <h3>
-          לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.
-        </h3>
-      </div>
+    <div class="BoxPhone">
+      <img
+        class="PhoneImage"
+        src="images/WallpaperSmartPhone.png"
+        alt="SmartPhone Picture"
+      />
     </div>
 
-    <div class="FooterBox">
-      <div class="FooterLeft">
-        <div class="FooterForm">
-          <h2>הקופון עלינו</h2>
-          <p>
-            .לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה
-          </p>
-          <form action="index.html" method="post">
-            <label for="name">:שם מלא</label>
-            <input type="text" id="name" name="name" placeholder="" required />
-
-            <label for="email">:דואל</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder=""
-              required
-            />
-
-            <label for="box">:סיבת ייעוץ</label>
-            <textarea name="text" id="Box" required></textarea>
-            <input class="button" type="button" value="שליחה" />
-          </form>
-        </div>
-      </div>
-      <div class="FooterRight">
-        <img
-          src="images/GoogleMapsLocationPicture.png"
-          alt="Location Picture"
-        />
-      </div>
+    <div class="BoxForm">
+      <form class="forme">
+        <h1>ייעוץ חינם</h1>
+        <h2>
+          לקבלת ייעוץ חינם,מוזמנים להשאיר פרטים <br />
+          ומומחה יחזור אליכם עם מענה
+        </h2>
+        <label for="fullName">שם מלא</label>
+        <input type="text" name="fullName" id="fullName" required />
+        <label for="email">דוא"ל</label>
+        <input type="text" name="email" id="email" required />
+        <label for="details">פרטים</label>
+        <textarea name="details" id="details" rows="2" required></textarea>
+        <input type="button" value="שליחה" />
+      </form>
     </div>
 
-    <div class="ContactIcons">
-      <a href="">
-        <img src="images/FaceBookIcon.png" alt="Facebook icon" />
-      </a>
-      <a href="">
-        <img src="images/InstagramIcon.png" alt="Instagram Icon" />
-      </a>
-      <a href="">
-        <img src="images/LinkedinIcon.png" alt="Linkedin Icon" />
-      </a>
-      <a href="">
-        <img src="images/PhoneIcon.png" alt="Phone Icon" />
-      </a>
-    </div>
-    <div class="Border"></div>
+    <footer class="FooterIconsContactMe">
+      <img src="" alt="Facebook Icon" />
+      <img src="" alt="Instagram Icon" />
+      <img src="" alt="Linkedin Icon" />
+      <img src="" alt="Phone Icon" />
+    </footer>
   </body>
 </html>
