--- a/projects/‏‏LandingPageProject7/project 7/index.html
+++ b/projects/‏‏LandingPageProject7/project 7/index.html
@@ -7,6 +7,7 @@
     <title>Project 7</title>
   </head>
   <body>
+    <div class="HeaderColor"></div>
     <div class="BoxWhatsapp">
       <img
         class="WhatsappImage"
@@ -41,10 +42,12 @@
     </div>
 
     <footer class="FooterIconsContactMe">
-      <img src="" alt="Facebook Icon" />
-      <img src="" alt="Instagram Icon" />
-      <img src="" alt="Linkedin Icon" />
-      <img src="" alt="Phone Icon" />
+      <img src="images/IconFacebook.png" alt="Facebook Icon" />
+      <img src="images/IconInstagram.png" alt="Instagram Icon" />
+      <img src="images/IconLinkedin.png" alt="Linkedin Icon" />
+      <img src="images/IconPhone2.png" alt="Phone Icon" />
     </footer>
+
+    <div class="FooterColor"></div>
   </body>
 </html>
