--- a/projects/LandingPageProject2/project 2/index.html
+++ b/projects/LandingPageProject2/project 2/index.html
@@ -14,13 +14,13 @@
 
 <div class="FormBox">
     <h2>תן לנו להוביל אותך קדימה</h2>
-    <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא  <br> מקום” בעת עריכ.
+    <p> אנחנו מייצרים פתרונות דיגיטליים מתקדמים, ומתאימים לכל סוגי העסקים נשמח לעזור גם לך
     </p>
     <br>
     <form>
-        <label for="full-name">:שם מלא</label>
+        <label for="full-name">שם מלא</label>
         <input type="text" id="full-name" placeholder="">
-        <label for="email">:דואל</label>
+        <label for="email">דואל</label>
         <input type="email" id="email" placeholder="">
         
         <button type="submit">שליחה</button>
