--- a/projects/LandingPageProject4/project 4/index.html
+++ b/projects/LandingPageProject4/project 4/index.html
@@ -14,10 +14,14 @@
     </h4>
 
     <div class="form">
-      <label for="fullName">שם מלא:</label>
-      <input type="text" placeholder="" required />
-      <label for="email">דואל:</label>
-      <input type="email" placeholder="" required />
+      <div class="input-group">
+        <label for="fullName">שם מלא:</label>
+        <input type="text" placeholder="" required />
+      </div>
+      <div class="input-group">
+        <label for="email">דואל:</label>
+        <input type="email" placeholder="" required />
+      </div>
       <button>שליחה</button>
     </div>
   </body>
