--- a/projects/LandingPageProject6/index.html
+++ b/projects/LandingPageProject6/index.html
@@ -12,7 +12,7 @@
       <nav class="NavBarFixed">
         <ul class="NavBar">
           <img
-            src="Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
+            src=" Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
             <a href="g:\האחסון שלי\Full Stack Developer Course Folder\קורס\GitHub-FullStack\FullStackProject-s\index.html ">
               <h3>Guy Even-Chen</h3>
             </a>    
@@ -20,11 +20,13 @@
       </nav>
     </header>
     <section class="Home">
-      <h1>Project 6 </h1>
+      <h1>Project 6</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+       Think out side of the box , its a interactive project that will make you think out side of the box.
+       with a great design and a great user experience.
+       
         <div class="ProjectButtons">
-          <a href="./project 6/index.html " class="button" target="_blank">View Project</a>
+          <a href="./project 6/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
         </div>
       </p>
