--- a/projects/LandingPageProject1/index.html
+++ b/projects/LandingPageProject1/index.html
@@ -22,7 +22,9 @@
     <section class="Home">
       <h1>Project 1</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+        Good Morning Coffee Lovers! <br />
+        This is intuitive  website that allows you to find the best coffee shops in your area. <br />
+        You can also find a great design for your home coffee bar. <br />
         <div class="ProjectButtons">
           <a href="./project 1/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
