--- a/projects/LandingPageProject2/index.html
+++ b/projects/LandingPageProject2/index.html
@@ -22,7 +22,9 @@
     <section class="Home">
       <h1>Project 2</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+        Please "let us move you forward" with a great UI and UX design. We create advanced digital solutions that fit all types of businesses.
+        <br />
+        You can achieve your goals with us. 
         <div class="ProjectButtons">
           <a href="./Project 2/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
