--- a/projects/LandingPageProject3/index.html
+++ b/projects/LandingPageProject3/index.html
@@ -22,7 +22,9 @@
     <section class="Home">
       <h1>Project 3</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+        "HERE & NOW" its a beautiful website that helps you to find the presents in your digital shop.  <br>
+        Intuitive and beautiful design that will help you to find the perfect present for your loved ones.
+
         <div class="ProjectButtons">
           <a href="./project 3/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
