--- a/projects/LandingPageProject4/index.html
+++ b/projects/LandingPageProject4/index.html
@@ -22,7 +22,9 @@
     <section class="Home">
       <h1>Project 4</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+       "Let us move you forward" its a intuitive and responsive project that will help you to get more leads and customers. <br>
+       You can create a beautiful landing page for your business.
+
         <div class="ProjectButtons">
           <a href="./project 4/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
