--- a/projects/LandingPageProject5/index.html
+++ b/projects/LandingPageProject5/index.html
@@ -22,7 +22,7 @@
     <section class="Home">
       <h1>Project 5</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+        "Discover the world" is a website that allows you to explore the world's most beautiful places. The website is designed to be user-friendly and easy to navigate. It features stunning images of various destinations, along with detailed information about each location. Whether you're planning your next vacation or just looking for some travel inspiration,Has everything you need to make your travel dreams a reality.
         <div class="ProjectButtons">
           <a href="./project 5/index.html" class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
