--- a/projects/LandingPageProject6/index.html
+++ b/projects/LandingPageProject6/index.html
@@ -22,8 +22,9 @@
     <section class="Home">
       <h1>Project 6</h1>
       <p>
-       Think out side of the box , its a interactive project that will make you think out side of the box.
+       "Think out side of the box" its a interactive project that will make you think out side of the box. <br>
        with a great design and a great user experience.
+       A box of opportunities for your business. 
        
         <div class="ProjectButtons">
           <a href="./project 6/index.html" class="button" target="_blank">View Project</a>
