--- a/projects/‏‏LandingPageProject7/index.html
+++ b/projects/‏‏LandingPageProject7/index.html
@@ -22,7 +22,10 @@
     <section class="Home">
       <h1>Project 7 </h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, id quis adipisci dolore eos necessitatibus perferendis veritatis laboriosam cumque maxime. Laudantium harum et quod dolores laborum, deserunt quisquam praesentium voluptas!
+        "Free consultation" its a project for a company that offers free consultation for people who want to start a new business. <br>
+        If you need an amazing website for your business, you can contact me.
+
+
         <div class="ProjectButtons">
           <a href="./project 7/index.html " class="button" target="_blank">View Project</a>
           <a href="path/to/project.zip" class="button" download>Download</a>
