--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <textarea id="description" name="description" rows="3" maxlength="500" required></textarea>
               <br /><br />
       
-              <input type="button" value="Send to Guy" /></form>
+              <input type="button" value="Send me" /></form>
           </div>
         </div>
       </section>
@@ -196,11 +196,9 @@
           </svg>
         </a>
       </div>
-    <footer>
-      <div class="Footer">
+    <footer class="Footer">
         <p>
           &copy; 2025 Guy Even-Chen. All rights reserved.
         </p>
-      </div>
   </body>
 </html>
