--- a/projects/LandingPageProject1/index.html
+++ b/projects/LandingPageProject1/index.html
@@ -27,7 +27,7 @@
         You can also find a great design for your home coffee bar. <br />
         <div class="ProjectButtons">
           <a href="./project 1/index.html" class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download</a>
+          <a href="./ZipedProjectForDownload/project 1.zip" class="button" download>Download</a>
         </div>
       </p>
 
