--- a/projects/LandingPageProject2/index.html
+++ b/projects/LandingPageProject2/index.html
@@ -27,7 +27,7 @@
         You can achieve your goals with us. 
         <div class="ProjectButtons">
           <a href="./Project 2/index.html" class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download</a>
+          <a href="./ZipedProjectForDownload/Project 2.zip" class="button" download>Download</a>
         </div>
       </p>
 
