--- a/projects/LandingPageProject4/index.html
+++ b/projects/LandingPageProject4/index.html
@@ -27,7 +27,7 @@
 
         <div class="ProjectButtons">
           <a href="./project 4/index.html" class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download</a>
+          <a href="./ZipedProjectFoDownload/project 4.zip" class="button" download>Download</a>
         </div>
       </p>
 
