--- a/projects/LandingPageProject5/index.html
+++ b/projects/LandingPageProject5/index.html
@@ -25,7 +25,7 @@
         "Discover the world" is a website that allows you to explore the world's most beautiful places. The website is designed to be user-friendly and easy to navigate. It features stunning images of various destinations, along with detailed information about each location. Whether you're planning your next vacation or just looking for some travel inspiration,Has everything you need to make your travel dreams a reality.
         <div class="ProjectButtons">
           <a href="./project 5/index.html" class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download</a>
+          <a href="./ZipedProjectFoDownload/project 5.zip" class="button" download>Download</a>
         </div>
       </p>
 
