--- a/projects/LandingPageProject6/index.html
+++ b/projects/LandingPageProject6/index.html
@@ -28,7 +28,7 @@
        
         <div class="ProjectButtons">
           <a href="./project 6/index.html" class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download</a>
+          <a href="./ZipedProjectForDownload/project 6.zip" class="button" download>Download</a>
         </div>
       </p>
 
