--- a/projects/‏‏LandingPageProject7/index.html
+++ b/projects/‏‏LandingPageProject7/index.html
@@ -28,7 +28,7 @@
 
         <div class="ProjectButtons">
           <a href="./project 7/index.html " class="button" target="_blank">View Project</a>
-          <a href="path/to/project.zip" class="button" download>Download</a>
+          <a href="./ZipedProjectForDownload/project 7.zip" class="button" download>Download</a>
         </div>
       </p>
 
