--- a/index.html
+++ b/index.html
@@ -86,63 +86,64 @@
 
             <div class="ProjectContainer">
                 <img src="Images/CoffreeProjectWallpaper.png" alt="Project 1" class="ProjectImage" />
-                <h4>Project 1</h4>
+                <h4>PROJECT 1</h4>
                 <p>
-                    This is a description of the first project. It is a project that I have worked on and I am proud of.
+                    The Coffee<br>
+
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject1/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject1/index.html"> Open me</a>
             </div>
 
             <div class="ProjectContainer">
                 <img src="Images/PurpleProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>Project 2</h4>
+                <h4>PROJECT 2</h4>
                 <p>
-                    This is a description of the second project. It is a project that I have worked on and I am proud of.
+                    The "Let us lead you forward"<br>
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject2/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject2/index.html"> Open me</a>
             </div>
 
             <div class="ProjectContainer">
                 <img src="Images/HereNowProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>Project 3</h4>
+                <h4>PROJECT 3</h4>
                 <p>
-                    This is a description of the third project. It is a project that I have worked on and I am proud of.
+                    The "HERE & NOW"<br>
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject3/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject3/index.html"> Open me</a>
             </div>
 
             <div class="ProjectContainer">
                 <img src="Images/LetUsLeadProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>Project 4</h4>
+                <h4>PROJECT 4</h4>
                 <p>
-                    This is a description of the fourth project. It is a project that I have worked on and I am proud of.
+                    The "Let us lead you ahead"<br>
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject4/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject4/index.html"> Open me</a>
             </div>
 
             <div class="ProjectContainer">
                 <img src="Images/GridProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>Project 5</h4>
+                <h4>PROJECT 5</h4>
                 <p>
-                    This is a description of the fifth project. It is a project that I have worked on and I am proud of.
+                    The "Discover World"<br>
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject5/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject5/index.html"> Open me</a>
             </div>
             <div class="ProjectContainer">
                 <img src="Images/BoxProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>Project 6</h4>
+                <h4>PROJECT 6</h4><br>
                 <p>
-                    This is a description of the six project.<br> It is a project that I have worked on and I am proud of.
+                    The "Box"
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject6/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject6/index.html"> Open me</a>
             </div>
             <div class="ProjectContainer">
                 <img src="Images/YellowProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>Project 7</h4>
+                <h4>PROJECT 7</h4>
                 <p>
-                    This is a description of the seventh project.<br> It is a project that I have worked on and I am proud of.
+                    The "Consulting"<br>
                 </p>
-                <a class="ProjectButton" href="./projects/LandingPageProject7/index.html"> Show Project</a>
+                <a class="ProjectButton" href="./projects/LandingPageProject7/index.html"> Open me</a>
             </div>
             </div>
         </div>
