--- a/projects/LandingPageProject2/index.html
+++ b/projects/LandingPageProject2/index.html
@@ -13,7 +13,7 @@
         <ul class="NavBar">
           <img
             src=" Images/ProfilePicture2.jpg"alt="My Profile Picture"class="ProfilePictureNavBar"/>
-            <a href="g:\האחסון שלי\Full Stack Developer Course Folder\קורס\GitHub-FullStack\FullStackProject-s\index.html ">
+            <a href="/index.html ">
               <h3>Guy Even-Chen</h3>
             </a>    
         </ul>
