--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h2>About me:</h2>
       <div>
         <p>
-            I am a dedicated Full Stack Web Developer and Cyber Security
+            I am a dedicated <span class="textSection"> Full Stack Web Developer </span> and <span class="textSection">Cyber Security</span>
             Enthusiast with a passion for creating innovative and secure web
             applications.<br />
             Over the past two years, I have honed my skills and gained extensive
