--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="SectionProfilePicture">
       <img
-        src="Images/ProfilePicture.jpg"alt="Profile Picture 2"class="ProfilePictureSection"/>
+        src="Images/ProfilePicture.jpg"alt="Profile Picture of me"class="ProfilePictureSection"/>
     </div>
 
     <div id="about-me-section" class="AboutMe">
