--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div class="ProjectContainer">
                 <img src="Images/BoxProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>PROJECT 6</h4><br>
+                <h4>PROJECT 6</h4>
                 <p>
                     The "Box"
                 </p>
