--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="about-me-section" class="AboutMe">
-    <h2>About me:</h2>
+    <h2>About me</h2>
       <div>
         <p>
             I am a dedicated <span class="textSection"> Full Stack Web Developer </span> and <span class="textSection">Cyber Security</span>
@@ -80,7 +80,7 @@
     </div>
 
     <section id="services-section" class="ProjectSection">
-        <h2> The Projects:</h2>
+        <h2> The Projects</h2>
 
         <div class="ProjectBox">
 
@@ -151,7 +151,7 @@
 
       <section>
         <div id="contact-me-section" class="ContactMe">
-          <h2>Contact me:</h2>
+          <h2>Contact me</h2>
           <div id="contact-me-section" class="Contact">
             <form class="Form" action="/submit_form" method="post">
               <h2>Contact me:</h2>
