--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <li class="navbar-links"><a href="#home-section">Home</a></li>
           <li class="navbar-links"><a href="#about-me-section">About</a></li>
-          <li class="navbar-links"><a href="#contact-me-section">Contact me</a></li>
+          <li class="navbar-links"><a href="#contact-me-section">Contact</a></li>
           <li class="navbar-links"><a href="#services-section">Services</a></li>
         </ul>
       </nav>
@@ -29,7 +29,7 @@
       <p>
         This is my professional work portfolio, here you can find all the
         projects I have made.<br />
-        Project's related to Full Stack Web Development and Cyber Security
+        Projects related to Full Stack Web Development and Cyber Security
         Tools.
       </p>
     </section>
@@ -46,14 +46,14 @@
     </div>
     <div class="SectionProfilePicture">
       <img
-        src="Images/ProfilePicture.jpg"alt="Profile Picture of me"class="ProfilePictureSection"/>
+        src="Images/ProfilePicture.jpg"alt="Profile Picture 2"class="ProfilePictureSection"/>
     </div>
 
     <div id="about-me-section" class="AboutMe">
-    <h2>About me</h2>
+    <h2>About me:</h2>
       <div>
         <p>
-            I am a dedicated <span class="textSection"> Full Stack Web Developer </span> and <span class="textSection">Cyber Security</span>
+            I am a dedicated Full Stack Web Developer and Cyber Security
             Enthusiast with a passion for creating innovative and secure web
             applications.<br />
             Over the past two years, I have honed my skills and gained extensive
@@ -80,7 +80,7 @@
     </div>
 
     <section id="services-section" class="ProjectSection">
-        <h2> The Projects</h2>
+        <h2> The Projects:</h2>
 
         <div class="ProjectBox">
 
@@ -131,7 +131,7 @@
             </div>
             <div class="ProjectContainer">
                 <img src="Images/BoxProjectWallpaper.png " alt="Project 1" class="ProjectImage" />
-                <h4>PROJECT 6</h4>
+                <h4>PROJECT 6</h4><br>
                 <p>
                     The "Box"
                 </p>
@@ -151,7 +151,7 @@
 
       <section>
         <div id="contact-me-section" class="ContactMe">
-          <h2>Contact me</h2>
+          <h2>Contact me:</h2>
           <div id="contact-me-section" class="Contact">
             <form class="Form" action="/submit_form" method="post">
               <h2>Contact me:</h2>
