--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             something exceptional.
         </p>
         <br />
-        <a class="Resume"href="files/Guy Even-Chen_Resume.pdf"download="Guy_Even-Chen_Resume.pdf">Download My Resume
+        <a class="Resume"href="files/Guy Even-Chen_Resume.pdf"download="Guy_Even-Chen_Resume.pdf">Download Resume
         <img class="ResumeIcon"src=" Images/Resume.png "alt="Download Icon "/></a>
       </div>
     </div>
