--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Guy Even-Chen </title>
+    <title>Guy Even-Chen Portfolio</title>
     <link rel="stylesheet" href="style/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
@@ -19,8 +19,8 @@
 
           <li class="navbar-links"><a href="#home-section">Home</a></li>
           <li class="navbar-links"><a href="#about-me-section">About</a></li>
+          <li class="navbar-links"><a href="#contact-me-section">Contact me</a></li>
           <li class="navbar-links"><a href="#services-section">Services</a></li>
-          <li class="navbar-links"><a href="#contact-me-section">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -29,7 +29,7 @@
       <p>
         This is my professional work portfolio, here you can find all the
         projects I have made.<br />
-        Projects related to Full Stack Web Development and Cyber Security
+        Project's related to Full Stack Web Development and Cyber Security
         Tools.
       </p>
     </section>
@@ -50,7 +50,7 @@
     </div>
 
     <div id="about-me-section" class="AboutMe">
-    <h2>About me</h2>
+    <h2>About me:</h2>
       <div>
         <p>
             I am a dedicated Full Stack Web Developer and Cyber Security
@@ -74,13 +74,13 @@
             something exceptional.
         </p>
         <br />
-        <a class="Resume"href="files/Guy Even-Chen_Resume.pdf"download="Guy_Even-Chen_Resume.pdf">Download Resume
+        <a class="Resume"href="files/Guy Even-Chen_Resume.pdf"download="Guy_Even-Chen_Resume.pdf">Download My Resume
         <img class="ResumeIcon"src=" Images/Resume.png "alt="Download Icon "/></a>
       </div>
     </div>
 
     <section id="services-section" class="ProjectSection">
-        <h2> The Projects</h2>
+        <h2> The Projects:</h2>
 
         <div class="ProjectBox">
 
@@ -151,7 +151,7 @@
 
       <section>
         <div id="contact-me-section" class="ContactMe">
-          <h2>Contact me</h2>
+          <h2>Contact me:</h2>
           <div id="contact-me-section" class="Contact">
             <form class="Form" action="/submit_form" method="post">
               <h2>Contact me:</h2>
